homework/week2/nginx/nginx_np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-np
  namespace: user-35
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: nginx
  type: NodePort
