homework/week2/nginx/nginx_ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hw2
  namespace: user-35
spec:
  rules:
    - host: hw2-user35.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
